segunda pre entrega

--- a/pages/about.html
+++ b/pages/about.html
@@ -11,7 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet">
     <!-- LINK AL CSS-->
     <link rel="stylesheet" href="../css/style.css">
-    <title>Sobre nosotros</title>
+    <title>precios</title>
 </head>
 
 <body>
@@ -35,13 +35,13 @@
     
 
 <!-- ETIQUETA DE PARRAFO-->
-<h2>Precios del deporte</h2>
+<h1>Precios del deporte</h1>
 <section class="hero">
     <p class="hero-parrafo" id="parrafo"></p> El bmx en cualquiera de sus modalidades no es para nada económico hoy en dia el apoyo para los deportistas en especial en Latinoamérica es muy poco casi nulo todo el dinero tiene que correr por cuenta de los deportistas y sus familias, por ende no todo el mundo puede practicarlo a continuación veraz una tabla donde se podrá observar el precio de cada uno de los implementos deportivos que se necesitan para practicar el deporte
     </p>    
 </section>
 <!-- LISTA ORDENADA -->
-<h3>bicicross</h3>
+<h2>bicicross</h2>
 
 <li>Precio bicicleta estandar:  $524,74 USD</li>
 <li>Precio uniforme:  $113,34 USD</li>
